--- a/resources/sass/2-layouts/_sms-body.scss
+++ b/resources/sass/2-layouts/_sms-body.scss
@@ -109,5 +109,10 @@
         .inner{
             width:80%;
         }
+        form{
+            input#submit{
+                font-size:12px;
+            }
+        }
     }
 }
