--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1097,33 +1097,74 @@ nav ol.breadcrumb li {
 .outter-list-of-shops .wrapper-filtered-shops nav.sort-types .sort-by-btn, .outter-list-of-blogs .wrapper-filtered-items nav.sort-types .sort-by-btn,
 .outter-list-of-blogs .wrapper-filtered-blogs nav.sort-types .sort-by-btn,
 .outter-list-of-blogs .wrapper-filtered-shops nav.sort-types .sort-by-btn {
+  width: 70%;
   font-size: 16px;
   margin: 0;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row;
+          flex-flow: row;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
 }
 
-.outter-catalog-view .wrapper-filtered-items nav.sort-types .sort-by-btn.active,
-.outter-catalog-view .wrapper-filtered-blogs nav.sort-types .sort-by-btn.active,
-.outter-catalog-view .wrapper-filtered-shops nav.sort-types .sort-by-btn.active, .outter-brand-view-body .wrapper-filtered-items nav.sort-types .sort-by-btn.active,
-.outter-brand-view-body .wrapper-filtered-blogs nav.sort-types .sort-by-btn.active,
-.outter-brand-view-body .wrapper-filtered-shops nav.sort-types .sort-by-btn.active,
-.outter-list-of-shops .wrapper-filtered-items nav.sort-types .sort-by-btn.active,
-.outter-list-of-shops .wrapper-filtered-blogs nav.sort-types .sort-by-btn.active,
-.outter-list-of-shops .wrapper-filtered-shops nav.sort-types .sort-by-btn.active, .outter-list-of-blogs .wrapper-filtered-items nav.sort-types .sort-by-btn.active,
-.outter-list-of-blogs .wrapper-filtered-blogs nav.sort-types .sort-by-btn.active,
-.outter-list-of-blogs .wrapper-filtered-shops nav.sort-types .sort-by-btn.active {
+.outter-catalog-view .wrapper-filtered-items nav.sort-types .sort-by-btn input,
+.outter-catalog-view .wrapper-filtered-blogs nav.sort-types .sort-by-btn input,
+.outter-catalog-view .wrapper-filtered-shops nav.sort-types .sort-by-btn input, .outter-brand-view-body .wrapper-filtered-items nav.sort-types .sort-by-btn input,
+.outter-brand-view-body .wrapper-filtered-blogs nav.sort-types .sort-by-btn input,
+.outter-brand-view-body .wrapper-filtered-shops nav.sort-types .sort-by-btn input,
+.outter-list-of-shops .wrapper-filtered-items nav.sort-types .sort-by-btn input,
+.outter-list-of-shops .wrapper-filtered-blogs nav.sort-types .sort-by-btn input,
+.outter-list-of-shops .wrapper-filtered-shops nav.sort-types .sort-by-btn input, .outter-list-of-blogs .wrapper-filtered-items nav.sort-types .sort-by-btn input,
+.outter-list-of-blogs .wrapper-filtered-blogs nav.sort-types .sort-by-btn input,
+.outter-list-of-blogs .wrapper-filtered-shops nav.sort-types .sort-by-btn input {
+  display: none;
+}
+
+.outter-catalog-view .wrapper-filtered-items nav.sort-types .sort-by-btn label,
+.outter-catalog-view .wrapper-filtered-blogs nav.sort-types .sort-by-btn label,
+.outter-catalog-view .wrapper-filtered-shops nav.sort-types .sort-by-btn label, .outter-brand-view-body .wrapper-filtered-items nav.sort-types .sort-by-btn label,
+.outter-brand-view-body .wrapper-filtered-blogs nav.sort-types .sort-by-btn label,
+.outter-brand-view-body .wrapper-filtered-shops nav.sort-types .sort-by-btn label,
+.outter-list-of-shops .wrapper-filtered-items nav.sort-types .sort-by-btn label,
+.outter-list-of-shops .wrapper-filtered-blogs nav.sort-types .sort-by-btn label,
+.outter-list-of-shops .wrapper-filtered-shops nav.sort-types .sort-by-btn label, .outter-list-of-blogs .wrapper-filtered-items nav.sort-types .sort-by-btn label,
+.outter-list-of-blogs .wrapper-filtered-blogs nav.sort-types .sort-by-btn label,
+.outter-list-of-blogs .wrapper-filtered-shops nav.sort-types .sort-by-btn label {
+  margin: 0 2%;
+}
+
+.outter-catalog-view .wrapper-filtered-items nav.sort-types .sort-by-btn label.active,
+.outter-catalog-view .wrapper-filtered-blogs nav.sort-types .sort-by-btn label.active,
+.outter-catalog-view .wrapper-filtered-shops nav.sort-types .sort-by-btn label.active, .outter-brand-view-body .wrapper-filtered-items nav.sort-types .sort-by-btn label.active,
+.outter-brand-view-body .wrapper-filtered-blogs nav.sort-types .sort-by-btn label.active,
+.outter-brand-view-body .wrapper-filtered-shops nav.sort-types .sort-by-btn label.active,
+.outter-list-of-shops .wrapper-filtered-items nav.sort-types .sort-by-btn label.active,
+.outter-list-of-shops .wrapper-filtered-blogs nav.sort-types .sort-by-btn label.active,
+.outter-list-of-shops .wrapper-filtered-shops nav.sort-types .sort-by-btn label.active, .outter-list-of-blogs .wrapper-filtered-items nav.sort-types .sort-by-btn label.active,
+.outter-list-of-blogs .wrapper-filtered-blogs nav.sort-types .sort-by-btn label.active,
+.outter-list-of-blogs .wrapper-filtered-shops nav.sort-types .sort-by-btn label.active {
   color: #0042ff;
 }
 
-.outter-catalog-view .wrapper-filtered-items nav.sort-types .sort-by-btn.active i:before,
-.outter-catalog-view .wrapper-filtered-blogs nav.sort-types .sort-by-btn.active i:before,
-.outter-catalog-view .wrapper-filtered-shops nav.sort-types .sort-by-btn.active i:before, .outter-brand-view-body .wrapper-filtered-items nav.sort-types .sort-by-btn.active i:before,
-.outter-brand-view-body .wrapper-filtered-blogs nav.sort-types .sort-by-btn.active i:before,
-.outter-brand-view-body .wrapper-filtered-shops nav.sort-types .sort-by-btn.active i:before,
-.outter-list-of-shops .wrapper-filtered-items nav.sort-types .sort-by-btn.active i:before,
-.outter-list-of-shops .wrapper-filtered-blogs nav.sort-types .sort-by-btn.active i:before,
-.outter-list-of-shops .wrapper-filtered-shops nav.sort-types .sort-by-btn.active i:before, .outter-list-of-blogs .wrapper-filtered-items nav.sort-types .sort-by-btn.active i:before,
-.outter-list-of-blogs .wrapper-filtered-blogs nav.sort-types .sort-by-btn.active i:before,
-.outter-list-of-blogs .wrapper-filtered-shops nav.sort-types .sort-by-btn.active i:before {
+.outter-catalog-view .wrapper-filtered-items nav.sort-types .sort-by-btn label i:before,
+.outter-catalog-view .wrapper-filtered-blogs nav.sort-types .sort-by-btn label i:before,
+.outter-catalog-view .wrapper-filtered-shops nav.sort-types .sort-by-btn label i:before, .outter-brand-view-body .wrapper-filtered-items nav.sort-types .sort-by-btn label i:before,
+.outter-brand-view-body .wrapper-filtered-blogs nav.sort-types .sort-by-btn label i:before,
+.outter-brand-view-body .wrapper-filtered-shops nav.sort-types .sort-by-btn label i:before,
+.outter-list-of-shops .wrapper-filtered-items nav.sort-types .sort-by-btn label i:before,
+.outter-list-of-shops .wrapper-filtered-blogs nav.sort-types .sort-by-btn label i:before,
+.outter-list-of-shops .wrapper-filtered-shops nav.sort-types .sort-by-btn label i:before, .outter-list-of-blogs .wrapper-filtered-items nav.sort-types .sort-by-btn label i:before,
+.outter-list-of-blogs .wrapper-filtered-blogs nav.sort-types .sort-by-btn label i:before,
+.outter-list-of-blogs .wrapper-filtered-shops nav.sort-types .sort-by-btn label i:before {
   font-size: 10px;
   color: #0042ff;
   margin-left: 10px;
@@ -1877,18 +1918,10 @@ form.big-filter-without-title-checkbox button:after {
   position: absolute;
   top: 50%;
   right: 10px;
-  content: '\002B';
-  -webkit-transform: rotate(-90deg);
-          transform: rotate(-90deg);
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
 }
 
 form.big-filter-without-title-checkbox button.active:after {
-  -webkit-transform: rotate(90deg);
-          transform: rotate(90deg);
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
+  right: -10px;
 }
 
 form.big-filter-without-title-checkbox .panel {
@@ -2006,18 +2039,10 @@ form.big-filter-with-title-checkbox button:after {
   position: absolute;
   top: 50%;
   right: 10px;
-  content: '\002B';
-  -webkit-transform: rotate(-90deg);
-          transform: rotate(-90deg);
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
 }
 
 form.big-filter-with-title-checkbox button.active:after {
-  -webkit-transform: rotate(90deg);
-          transform: rotate(90deg);
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
+  right: -10px;
 }
 
 form.big-filter-with-title-checkbox .panel {
@@ -3936,8 +3961,7 @@ nav#main_navbar .collapse .navbar-nav .dropdown-main a.main-link {
       -ms-flex-align: center;
           align-items: center;
   padding: 10px 20px;
-  border-top-left-radius: 5px;
-  border-top-right-radius: 5px;
+  border-radius: 5px;
   font-family: 'cerapro-bold';
 }
 
@@ -4219,6 +4243,7 @@ nav#main_navbar .collapse .navbar-nav .dropdown:hover .round span:nth-child(6) {
   width: 100%;
   height: 400px;
   background: rgba(117, 0, 255, 0);
+  margin-top: 4px;
 }
 
 #carousel-index .carousel-control-prev-icon {
@@ -7303,6 +7328,9 @@ footer .footer-outter .social-contacts .contacts a.email::before {
 @media all and (max-width: 325px) {
   .outter-resend-sms .inner {
     width: 80%;
+  }
+  .outter-resend-sms form input#submit {
+    font-size: 12px;
   }
 }
 
