--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,6 +6,7 @@
 @import "0-plugins/range-slider";
 @import url("/css/mybazar-fonts.css");
 @import "base";
+@import "0-plugins/nice-select-prefixed";
 
 @import "2-layouts/mmenu";
 @import "2-layouts/top-header";
