--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1287,8 +1287,9 @@ nav ol.breadcrumb li {
   outline: none;
 }
 
-.outter-catalog-view .custom-control-input:active ~ .custom-control-label::before, .outter-brand-view-body .custom-control-input:active ~ .custom-control-label::before,
-.outter-list-of-shops .custom-control-input:active ~ .custom-control-label::before, .outter-list-of-blogs .custom-control-input:active ~ .custom-control-label::before {
+.outter-catalog-view .custom-control-input:active ~ .custom-control-label::before, .outter-catalog-view .custom-control-input.nice-select.open ~ .custom-control-label::before, .outter-brand-view-body .custom-control-input:active ~ .custom-control-label::before, .outter-brand-view-body .custom-control-input.nice-select.open ~ .custom-control-label::before,
+.outter-list-of-shops .custom-control-input:active ~ .custom-control-label::before,
+.outter-list-of-shops .custom-control-input.nice-select.open ~ .custom-control-label::before, .outter-list-of-blogs .custom-control-input:active ~ .custom-control-label::before, .outter-list-of-blogs .custom-control-input.nice-select.open ~ .custom-control-label::before {
   background-color: #0042ff;
 }
 
@@ -1427,13 +1428,13 @@ nav ol.breadcrumb li {
 }
 
 .all-filtered-items .item .description .item-action-icons div {
-  height: 50px;
-  width: 50px;
+  height: 45px;
+  width: 45px;
 }
 
 .all-filtered-items .item .description .item-action-icons div i {
-  font-size: 26px;
-  line-height: 50px;
+  font-size: 22px;
+  line-height: 45px;
 }
 
 .all-filtered-items .item .description .item-action-icons div.cart {
@@ -2364,6 +2365,12 @@ form.small-filter .card .card-body a.show-more {
   }
 }
 
+@media all and (max-width: 1465px) {
+  .outter-catalog-view .wrapper-filtered-items {
+    width: 80%;
+  }
+}
+
 @media all and (max-width: 1300px) {
   .outter-catalog-view form.big-filter, .outter-brand-view-body form.big-filter {
     width: 22%;
@@ -2399,7 +2406,9 @@ form.small-filter .card .card-body a.show-more {
         -ms-flex-flow: column;
             flex-flow: column;
   }
-  .outter-catalog-view form.big-filter, .outter-brand-view-body form.big-filter {
+  .outter-catalog-view form.big-filter-with-title-checkbox,
+  .outter-catalog-view form.big-filter-without-title-checkbox, .outter-brand-view-body form.big-filter-with-title-checkbox,
+  .outter-brand-view-body form.big-filter-without-title-checkbox {
     display: none;
     width: 100%;
   }
@@ -2407,9 +2416,9 @@ form.small-filter .card .card-body a.show-more {
     width: 100%;
   }
   .outter-catalog-view .wrapper-filtered-items nav.sort-types, .outter-brand-view-body .wrapper-filtered-items nav.sort-types {
-    -webkit-box-pack: space-evenly;
-        -ms-flex-pack: space-evenly;
-            justify-content: space-evenly;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
   }
   .outter-catalog-view .wrapper-filtered-items nav.sort-types button.navbar-toggler, .outter-brand-view-body .wrapper-filtered-items nav.sort-types button.navbar-toggler {
     display: inline-block;
@@ -2417,6 +2426,9 @@ form.small-filter .card .card-body a.show-more {
   .outter-catalog-view .wrapper-filtered-items nav.sort-types form.small-filter, .outter-brand-view-body .wrapper-filtered-items nav.sort-types form.small-filter {
     width: 100%;
     display: inline-block;
+  }
+  .outter-catalog-view .wrapper-filtered-items nav.sort-types .toggle-view, .outter-brand-view-body .wrapper-filtered-items nav.sort-types .toggle-view {
+    display: none;
   }
   .outter-catalog-view .wrapper-filtered-items .sort-by, .outter-brand-view-body .wrapper-filtered-items .sort-by {
     width: auto !important;
@@ -2473,6 +2485,9 @@ form.small-filter .card .card-body a.show-more {
   }
   h4.title {
     font-size: 24px;
+  }
+  .outter-catalog-view .wrapper-filtered-items nav.sort-types .sort-by-btn {
+    display: none;
   }
 }
 
@@ -2627,6 +2642,185 @@ form.small-filter .card .card-body a.show-more {
   .outter-catalog-view .wrapper-filtered-items .all-filtered-items.column .item .description, .outter-brand-view-body .wrapper-filtered-items .all-filtered-items.column .item .description {
     height: 30%;
   }
+}
+
+.nice-select {
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  background-color: #fff;
+  border-radius: 5px;
+  border: solid 1px #e8e8e8;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  clear: both;
+  cursor: pointer;
+  display: block;
+  float: left;
+  font-family: inherit;
+  font-size: 14px;
+  font-weight: normal;
+  height: 42px;
+  line-height: 40px;
+  outline: none;
+  padding-left: 18px;
+  padding-right: 30px;
+  position: relative;
+  text-align: left !important;
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  white-space: nowrap;
+  width: auto;
+}
+
+.nice-select:hover {
+  border-color: #dbdbdb;
+}
+
+.nice-select:active, .nice-select.open, .nice-select:focus {
+  border-color: #999;
+}
+
+.nice-select:after {
+  border-bottom: 2px solid #999;
+  border-right: 2px solid #999;
+  content: '';
+  display: block;
+  height: 5px;
+  margin-top: -4px;
+  pointer-events: none;
+  position: absolute;
+  right: 12px;
+  top: 50%;
+  -webkit-transform-origin: 66% 66%;
+  transform-origin: 66% 66%;
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+  -webkit-transition: all 0.15s ease-in-out;
+  transition: all 0.15s ease-in-out;
+  width: 5px;
+}
+
+.nice-select.open:after {
+  -webkit-transform: rotate(-135deg);
+  transform: rotate(-135deg);
+}
+
+.nice-select.open .list {
+  opacity: 1;
+  pointer-events: auto;
+  -webkit-transform: scale(1) translateY(0);
+  transform: scale(1) translateY(0);
+}
+
+.nice-select.disabled {
+  border-color: #ededed;
+  color: #999;
+  pointer-events: none;
+}
+
+.nice-select.disabled:after {
+  border-color: #cccccc;
+}
+
+.nice-select.wide {
+  width: 100%;
+}
+
+.nice-select.wide .list {
+  left: 0 !important;
+  right: 0 !important;
+}
+
+.nice-select.right {
+  float: right;
+}
+
+.nice-select.right .list {
+  left: auto;
+  right: 0;
+}
+
+.nice-select.small {
+  font-size: 12px;
+  height: 36px;
+  line-height: 34px;
+}
+
+.nice-select.small:after {
+  height: 4px;
+  width: 4px;
+}
+
+.nice-select.small .option {
+  line-height: 34px;
+  min-height: 34px;
+}
+
+.nice-select .list {
+  background-color: #fff;
+  border-radius: 5px;
+  -webkit-box-shadow: 0 0 0 1px rgba(68, 68, 68, 0.11);
+          box-shadow: 0 0 0 1px rgba(68, 68, 68, 0.11);
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  margin-top: 4px;
+  opacity: 0;
+  overflow: hidden;
+  padding: 0;
+  pointer-events: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  -webkit-transform-origin: 50% 0;
+  transform-origin: 50% 0;
+  -webkit-transform: scale(0.75) translateY(-21px);
+  transform: scale(0.75) translateY(-21px);
+  -webkit-transition: all 0.2s cubic-bezier(0.5, 0, 0, 1.25), opacity 0.15s ease-out;
+  transition: all 0.2s cubic-bezier(0.5, 0, 0, 1.25), opacity 0.15s ease-out;
+  z-index: 9;
+}
+
+.nice-select .list:hover .option:not(:hover) {
+  background-color: transparent !important;
+}
+
+.nice-select .option {
+  cursor: pointer;
+  font-weight: 400;
+  line-height: 40px;
+  list-style: none;
+  min-height: 40px;
+  outline: none;
+  padding-left: 18px;
+  padding-right: 29px;
+  text-align: left;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
+}
+
+.nice-select .option:hover, .nice-select .option.focus, .nice-select .option.selected.focus {
+  background-color: #f6f6f6;
+}
+
+.nice-select .option.selected {
+  font-weight: bold;
+}
+
+.nice-select .option.disabled {
+  background-color: transparent;
+  color: #999;
+  cursor: default;
+}
+
+.no-csspointerevents .nice-select .list {
+  display: none;
+}
+
+.no-csspointerevents .nice-select.open .list {
+  display: block;
 }
 
 #page .content {
@@ -3309,7 +3503,7 @@ nav#menu .mm-navbar__title span {
   height: 100%;
 }
 
-.main-header div.search-bar {
+.main-header form.search-bar {
   width: 45%;
   height: 45px;
   padding-right: 2px;
@@ -3330,7 +3524,7 @@ nav#menu .mm-navbar__title span {
   border-radius: 23px;
 }
 
-.main-header div.search-bar .input-with-tags {
+.main-header form.search-bar .input-with-tags {
   width: 85%;
   overflow: hidden;
   overflow-y: auto;
@@ -3351,11 +3545,11 @@ nav#menu .mm-navbar__title span {
           align-items: center;
 }
 
-.main-header div.search-bar .input-with-tags::webkit-scrollbar {
+.main-header form.search-bar .input-with-tags::webkit-scrollbar {
   display: none;
 }
 
-.main-header div.search-bar .input-with-tags .tag {
+.main-header form.search-bar .input-with-tags .tag {
   height: 35px;
   margin-right: 5px;
   padding: 5px 10px;
@@ -3371,64 +3565,69 @@ nav#menu .mm-navbar__title span {
   cursor: default;
 }
 
-.main-header div.search-bar .input-with-tags .tag span {
+.main-header form.search-bar .input-with-tags .tag span {
   white-space: nowrap;
 }
 
-.main-header div.search-bar .input-with-tags .tag i {
+.main-header form.search-bar .input-with-tags .tag i {
   font-size: 7px;
   line-height: 35px;
   color: white;
   margin-left: 5px;
 }
 
-.main-header div.search-bar .input-with-tags input {
+.main-header form.search-bar .input-with-tags input {
   width: 100%;
 }
 
-.main-header div.search-bar .input-with-tags input:focus::-webkit-input-placeholder {
+.main-header form.search-bar .input-with-tags input:focus::-webkit-input-placeholder {
   color: transparent;
 }
 
-.main-header div.search-bar .input-with-tags input:focus:-ms-input-placeholder {
+.main-header form.search-bar .input-with-tags input:focus:-ms-input-placeholder {
   color: transparent;
 }
 
-.main-header div.search-bar .input-with-tags input:focus::-ms-input-placeholder {
+.main-header form.search-bar .input-with-tags input:focus::-ms-input-placeholder {
   color: transparent;
 }
 
-.main-header div.search-bar .input-with-tags input:focus::placeholder {
+.main-header form.search-bar .input-with-tags input:focus::placeholder {
   color: transparent;
 }
 
-.main-header div.search-bar button.dropdown-toggle {
+.main-header form.search-bar .nice-select.select-main-search {
+  width: auto;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  border: none;
   color: #07108f;
-  margin-right: 10px;
-  padding: .375rem 1.75rem;
+  max-height: 240px;
+  width: 50%;
+  line-height: 33px;
 }
 
-.main-header div.search-bar button.dropdown-toggle::after {
-  margin-left: 0.5em;
-  vertical-align: 0.2em;
+.main-header form.search-bar .nice-select.select-main-search:after {
+  border-color: #07108f;
 }
 
-.main-header div.search-bar .dropdown-menu {
-  top: 2px !important;
+.main-header form.search-bar .nice-select.select-main-search .list {
   border: none;
   border-radius: 0;
-  padding: 0;
-  color: #0042ff;
+  color: #212529;
+  overflow: hidden;
+  white-space: no-wrap;
+  text-overflow: ellipsis;
   -webkit-box-shadow: 0px 2px 7px -5px black;
           box-shadow: 0px 2px 7px -5px black;
+  margin-top: 1px;
 }
 
-.main-header div.search-bar .dropdown-menu a.dropdown-item:hover {
+.main-header form.search-bar .nice-select.select-main-search .list:hover {
   color: #000 !important;
-  background-color: #f6f7f9 !important;
 }
 
-.main-header div.search-bar button.search {
+.main-header form.search-bar button.search {
   width: 50px;
   height: 40px;
   padding: 0;
@@ -3437,7 +3636,7 @@ nav#menu .mm-navbar__title span {
   border-radius: 23px;
 }
 
-.main-header div.search-bar button.search i.fa-search::before {
+.main-header form.search-bar button.search i.fa-search::before {
   color: #ffffff;
   font-size: 20px;
   line-height: 28px;
@@ -3839,7 +4038,7 @@ nav#menu .mm-navbar__title span {
   .main-header {
     padding: 0 8%;
   }
-  .main-header div.search-bar button.search {
+  .main-header form.search-bar button.search {
     width: 55px;
     height: 35px;
   }
@@ -3876,10 +4075,10 @@ nav#menu .mm-navbar__title span {
 }
 
 @media all and (max-width: 1145px) {
-  .main-header div.search-bar button.dropdown-toggle {
+  .main-header form.search-bar button.dropdown-toggle {
     padding: .375rem 0.75rem;
   }
-  .main-header div.search-bar button.search {
+  .main-header form.search-bar button.search {
     width: 60px;
   }
 }
@@ -4827,7 +5026,7 @@ nav#main_navbar .collapse .navbar-nav .dropdown:hover .round span:nth-child(6) {
   color: #ffc621;
 }
 
-.rating > label:active {
+.rating > label:active, .rating > label.nice-select.open {
   position: relative;
   top: 2px;
   left: 2px;
