--- a/resources/sass/2-layouts/_main-header.scss
+++ b/resources/sass/2-layouts/_main-header.scss
@@ -10,8 +10,8 @@
             width:100%;
             height:100%;
         }
-    }
-    div.search-bar{
+    } 
+    form.search-bar{
         width:45%;
         height:45px;
         padding-right:2px;
@@ -56,27 +56,29 @@
                 }
             }
         }
-        button.dropdown-toggle{
+        .nice-select.select-main-search{
+            width:auto;
+            box-shadow: none;
+            border: none;
             color:$title_color;
-            margin-right:10px;
-            padding: .375rem 1.75rem;
-            &::after{
-                margin-left: 0.5em;
-                vertical-align: 0.2em;
+            max-height: 240px;
+            width: 50%;
+            line-height:33px;
+            &:after{
+                border-color:$title_color;
             }
-        }
-        .dropdown-menu{
-            top:2px !important;
-            border:none;
-            border-radius:0;
-            padding:0;
-            color:$item_price_color;
-            @include box-shadow(0px, 2px, 7px, -5px, rgba(0,0,0,1));
-            a.dropdown-item{
+            .list{
+                border:none;
+                border-radius:0;
+                color:#212529;
+                overflow: hidden;
+                white-space: no-wrap;
+                text-overflow: ellipsis;
+                @include box-shadow(0px, 2px, 7px, -5px, rgba(0,0,0,1));
+                margin-top:1px;
                 &:hover{
                     color:#000 !important;
-                    background-color:$bg_grey_color2 !important;
-                }
+                } 
             }
         }
         button.search{
@@ -374,7 +376,7 @@
 @media all and (max-width:1522px){
     .main-header{
         padding:0 8%;
-        div.search-bar{
+        form.search-bar{
             button.search{
                 width:55px;
                 height:35px;
@@ -414,7 +416,7 @@
 }
 @media all and (max-width:1145px){
     .main-header{
-        div.search-bar{
+        form.search-bar{
             button.dropdown-toggle{
                 padding:.375rem 0.75rem;
             }
