integrate section products in homepage

--- a/resources/sass/_base.scss
+++ b/resources/sass/_base.scss
@@ -1504,7 +1504,7 @@ form.small-filter{
             }
         }
     }
-    .newone, .recommended, .popular-products{
+    .carousel-products{
         height:565px !important;
     }
     h4.title{
