--- a/resources/sass/2-layouts/_newones-popular_p-recommended.scss
+++ b/resources/sass/2-layouts/_newones-popular_p-recommended.scss
@@ -1,4 +1,4 @@
-.recommended, .popular-products, .newone{
+.carousel-products {
     width:100%;
     height:700px;
     background:white;
@@ -12,7 +12,7 @@
     }
 }
 @media all and (max-width:1250px){
-    .recommended, .popular-products, .newone{
+    .carousel-products{
         .rate{
             width:100%;
         }
