--- a/resources/sass/2-layouts/_carousel-index.scss
+++ b/resources/sass/2-layouts/_carousel-index.scss
@@ -1,4 +1,4 @@
-#carousel-index{
+#carouselIndex{
     width:100%;
     height:400px;
     background:rgba(117, 0, 255, 0);
@@ -35,4 +35,5 @@
         }
     }
 }
+
       
