--- a/resources/sass/2-layouts/_carousel-index.scss
+++ b/resources/sass/2-layouts/_carousel-index.scss
@@ -25,7 +25,7 @@
     .carousel-inner{
         height:100%;
         width:100%;
-        .item{
+        .carousel-item{
             height:100%;
             width:100%;
             img{
