--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4467,6 +4467,11 @@ nav#main_navbar .collapse .navbar-nav .dropdown:hover .round span:nth-child(6) {
   border-radius: 50%;
 }
 
+#carouselIndex .carousel-inner {
+  height: 100%;
+  width: 100%;
+}
+
 .carousel-products {
   width: 100%;
   height: 700px;
