--- a/resources/sass/2-layouts/_carousel-index.scss
+++ b/resources/sass/2-layouts/_carousel-index.scss
@@ -22,6 +22,10 @@
         height:10px;
         border-radius:50%;
     }
+    .carousel-inner{
+        height:100%;
+        width:100%;
+    }
 }
 
       
