--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,21 +1,44 @@
-// Bootstrap
-@import '~bootstrap/scss/bootstrap';
+@import "variables";
 
-// Fonts
-@import '../../../public/vendor/adminlte/dist/css/fonts.css';
-@import '../../../public/vendor/glyphicon/css/glyphicon.css';
-@import '~@fortawesome/fontawesome-free/css/all.css';
-// OverlayScrollbars
-@import '~overlayscrollbars/css/OverlayScrollbars.css';
-// iCheck
-@import '~icheck-bootstrap/icheck-bootstrap.css';
-// AdminLTE
-@import '../../../vendor/almasaeed2010/adminlte/dist/css/adminlte.css';
-// Bootstrap
-// Already imported by AdminLTE
-//@import '~bootstrap/scss/bootstrap';
+@import "mixins";
 
-@import "~font-awesome/scss/font-awesome";
+@import "0-plugins/plugins-index";
+@import "0-plugins/range-slider";
+@import url("/css/mybazar-fonts.css");
+@import "base";
+@import "0-plugins/nice-select-prefixed";
 
-// Select2
-//@import '../../../public/vendor/select2/dist/css/select2.css';
+@import "2-layouts/mmenu";
+@import "2-layouts/top-header";
+@import "2-layouts/main-header";
+@import "2-layouts/nav-header";
+@import "2-layouts/carousel-index";
+
+@import "2-layouts/newones-popular_p-recommended";
+@import "2-layouts/product-of-day";
+@import "2-layouts/price-rating-comments";
+@import "2-layouts/threesmallbanners";
+
+@import "2-layouts/index-shop-views";
+@import "2-layouts/full-banner";
+@import "2-layouts/blogs";
+@import "2-layouts/top-brands";
+@import "2-layouts/videos";
+@import "2-layouts/video-blog-body";
+@import "2-layouts/videoblog-view-body";
+@import "2-layouts/news-letter";
+@import "2-layouts/footer";
+@import "2-layouts/auth-body";
+@import "2-layouts/sms-body";
+@import "2-layouts/brands-alphabet";
+@import "2-layouts/catalog-section-items";
+@import "2-layouts/compare-body";
+@import "2-layouts/delivery-body";
+@import "2-layouts/pagination";
+@import "2-layouts/single-product-with-des";
+@import "2-layouts/single-blog-body";
+@import "2-layouts/similar-products";
+@import "2-layouts/salesview-body";
+@import "2-layouts/sales-body";
+@import "2-layouts/pay-checkout-cart";
+
