product list grid

--- a/public/css/jquery.rateyo.css
+++ b/public/css/jquery.rateyo.css
@@ -19,7 +19,7 @@
 .jq-ry-container > .jq-ry-group-wrapper > .jq-ry-group {
   position: relative;
   line-height: 0;
-  z-index: 10;
+  /*z-index: 10;*/
   white-space: nowrap;
 }
 .jq-ry-container > .jq-ry-group-wrapper > .jq-ry-group > svg {
@@ -30,7 +30,7 @@
 }
 .jq-ry-container > .jq-ry-group-wrapper > .jq-ry-group.jq-ry-rated-group {
   width: 0;
-  z-index: 11;
+  /*z-index: 11;*/
   position: absolute;
   top: 0;
   left: 0;
